<resources>
    <string name="app_name">Todo List</string>


    <!-- the labels used for the details view -->
    <string name="itemdetails_description">Description</string>
    <string name="itemdetails_name">Name</string>
    <string name="itemdetails_favourite">Favourite</string>
    <string name="itemdetails_date">Date</string>
    <string name="itemdetails_importance">Importance</string>

    <string name="background_prompt">Hintergrundauswahl</string>
    <string name="fav_str">Favorite</string>
    <string name="del_str">Delete</string>
    <string name="save_str">Save</string>
    <string name="reg_txt">Register Now!</string>
    <string name="log_txt">Log In</string>
    <string name="pass_txt">Password</string>
    <string name="email_txt">Email Address</string>
    <string name="loc_txt">Add Location</string>
    <string name="date_txt">Add Date</string>
    <string name="done_str">Have you finished this task?</string>
    <string name="important_str">How important is this task?</string>

    <!-- the main menu items -->
    <string-array name="main_menu">
        <item>Local Accessor</item>
        <item>Resteasy Client</item>
        <item>Remote Web Content</item>
        <item>Remote Web Content via Chrome</item>
        <item>Simple URL</item>
        <item>Apache HttpClient</item>
        <item>HttpURLConnection</item>
    </string-array>

    <!-- constants for distinguishing the different menu options (which will all be realised by the same activities, the only difference being the implementation of the CRUD interface for accessing data items -->
    <item name="localAccessor" type="integer">0</item>
    <item name="urlClass" type="integer">1</item>
    <item name="apacheHttpClient" type="integer">2</item>
    <item name="urlConnection" type="integer">3</item>
    <item name="resteasyFramework" type="integer">4</item>

    <!--  the background options and the resources -->
    <string-array name="background_list">
        <item>Waschbeton</item>
        <item>Plastik</item>
        <item>Holz</item>
    </string-array>

    <string-array name="background_resources_list">
        <item>concrete</item>
        <item>greenplastic</item>
        <item>woodpanel</item>
    </string-array>
</resources>
